<?xml version="1.0" encoding="UTF-8"?>
<!--

    SPDX-License-Identifier: MIT
    See LICENSE file for details.

    Copyright 2000-2026 Russell Gold
    Copyright 2021-2026 hazendaz

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>62</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.httpunit</groupId>
    <artifactId>httpunit</artifactId>
    <version>1.18.1-SNAPSHOT</version>

    <name>httpunit</name>
    <description>A library for testing websites programmatically</description>

    <url>http://www.httpunit.org</url>
    <inceptionYear>2000</inceptionYear>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
            <comments>See SPDX: https://spdx.org/licenses/MIT.html</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>russgold</id>
            <name>Russell Gold</name>
            <organization>Oracle, Inc.</organization>
            <roles>
                <role>lead</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>wolfgang_fahl</id>
            <name>Wolfgang Fahl</name>
            <organization>BITPlan GmbH http://www.bitplan.com</organization>
            <roles>
                <role>lead</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/hazendaz/httpunit.git</connection>
        <developerConnection>scm:git:https://github.com/hazendaz/httpunit.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/httpunit</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/hazendaz/httpunit/issues</url>
    </issueManagement>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>HttpUnit GitHub Pages</name>
            <url>scm:git:https://github.com/hazendaz/httpunit.git</url>
        </site>
    </distributionManagement>

    <properties>
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>
        <javadoc.java.release.version>17</javadoc.java.release.version>
        <legacyMode>true</legacyMode>

        <!-- Automatic Module Name -->
        <module.name>com.meterware.httpunit</module.name>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1785632860</project.build.outputTimestamp>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.mozilla</groupId>
            <artifactId>rhino</artifactId>
            <version>1.9.1</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>neko-htmlunit</artifactId>
            <version>2.67.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>4.0.4</version>
        </dependency>
        <dependency>
            <groupId>com.github.jtidy</groupId>
            <artifactId>jtidy</artifactId>
            <version>1.0.5</version>
        </dependency>
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.2</version>
            <exclusions>
                <exclusion>
                    <groupId>xml-apis</groupId>
                    <artifactId>xml-apis</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>1.6.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.1.3</version>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>6.1.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.20</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/ErrorTests.java</exclude>
                        <exclude>**/FailingTests.java</exclude>
                        <exclude>**/PassingTests.java</exclude>
                        <exclude>**/ServletAccessTestClass.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
